# teleclaw

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  Supervisor.xml  config.example.yaml  config_test.yaml  docker-compose.yml  pyproject.toml  relay-screenshot.py  relay-stop.py  relay-tool-use.py  relay_common.py  requirements.txt  send_telegram.py  supervisor-wrapper.bat  supervisor-wrapper.py  supervisor.py  svctl.py  teleclaw-wrapper.py  teleclaw.service  telegram_helper.py
.claude/skills/: setup.md
.github/: FUNDING.yml
docs/analysis/: architecture.md  module-map.md  scripts-architecture.md  supervisor-review.md
hub/: __init__.py  __main__.py  channel.py  channel_telegram.py  commands.py  config.py  logging_utils.py  messages.py  session.py  state_db.py  supervisor.py  teleclaw.py  telegram_api.py  usage_fmt.py
src/: __init__.py  __main__.py  agent_display.py  channel_telegram.py  commands.py  config.py  file_handler.py  logging_utils.py  messages.py  process_utils.py  service.py  session.py  state_db.py  stream_handler.py  tcctl.py  teleclaw.py  teleclaw_ctl.py  teleclaw_daemon.py  telegram_helper.py  usage_fmt.py  wrapper.py
supervisor/: __init__.py  __main__.py  commands.py  config.py  logging_utils.py  session.py  supervisor.py  telegram_api.py
tests/: conftest.py  live_sdk_test.py  mock_channel.py  mock_sdk.py  scenario_restart_loop.md  smoke_supervisor.md  test_async_logic.py  test_config.py  test_no_drain.py  test_pause.py  test_smoke.py  test_smoke_live.py  test_stream_handler.py  test_telegram_api.py  test_unit.py
(+6 files in other folders)
