[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "teleclaw"
version = "0.1.0"
description = "Telegram-based remote control for Claude Code sessions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "gbongk" },
]
keywords = ["claude-code", "telegram", "agent", "teleclaw"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "claude-code-sdk>=0.0.20",
    "httpx>=0.27",
    "anyio>=4.0",
    "psutil>=5.9",
]

[project.urls]
Homepage = "https://github.com/gbongk/teleclaw"
Repository = "https://github.com/gbongk/teleclaw"
Issues = "https://github.com/gbongk/teleclaw/issues"

[project.scripts]
teleclaw = "src:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
